Added opens to surefire