@@ -371,6 +371,11 @@
                         </dependency>
                     </dependencies>
                     <configuration>
+                        <argLine>
+                            -Xmx2G
+                            --add-opens java.base/java.lang=ALL-UNNAMED
+                            --add-opens java.base/java.util=ALL-UNNAMED
+                        </argLine>
                         <!--                        <includes>
                             <include>**/*.class</include>
                         </includes>-->
@@ -404,6 +409,11 @@
                         <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
                         <forkCount>1</forkCount>
                         <reuseForks>false</reuseForks>
+                        <argLine>
+                            -Xmx2G
+                            --add-opens java.base/java.lang=ALL-UNNAMED
+                            --add-opens java.base/java.util=ALL-UNNAMED
+                        </argLine>
                     </configuration>
                     <executions>
                         <execution>
